# samurai

./: .gitignore  BSpline.cpp  BandedMatrix.h  CMakeLists.txt  CMakeLists.txt.clang  CMakeLists.txt.debug  CMakeLists.txt.release  CST2D.cpp  CST2D.h  CostFunction.cpp  CostFunction.h  CostFunction3D.cpp  CostFunction3D.h  CostFunctionAnalytic.cpp  CostFunctionAnalytic.h  CostFunctionR.cpp  CostFunctionR.h  CostFunctionRZ.cpp  CostFunctionRZ.h  CostFunctionRZ_CPU.cpp  CostFunctionRZ_CPU.h  CostFunctionRZ_GPU.cpp  CostFunctionRZ_GPU.h  CostFunctionVAR.cpp  CostFunctionXYZ.cpp  CostFunctionXYZ.h  CostFunctionXYZ_CPU.cpp  CostFunctionXYZ_CPU.h  CostFunctionXY_CPU.cpp  CostFunctionXY_CPU.h  Dockerfile  Dockerfile.coverage  Dorade.cpp  Dorade.h  FrameCenter.cpp  FrameCenter.h  GPUdriver.cu  GPUdriver.cu.cpp  HCq_kernel.cu  Info.plist  (+44 more)
.github/workflows/: CPU_Beltrami_build_run.yml  CPU_Beltrami_derecho.yml  Casper_CPU_build_run.yml  Derecho_CPU-GPU_build_run.yml  GPU_Beltrami_build_run.yml
BSpline/: BSpline.h
cmake/Modules/: FindFFTW.cmake  FindGeographic.cmake  FindGeographicLib.cmake  FindHDF5.cmake  FindLibZip.cmake  FindNetCDF.cmake  lrose-config.cmake
cmake/modules/: CodeCoverage.cmake  FindFFTW.cmake  FindNetCDF.cmake  lrose-config.cmake
docker/: Dockerfile  Dockerfile.coverage  Dockerfile.validation
f90/: README  samurai_cdef.f90
ncar_scripts/: casper_a100_submit.sh  casper_cpu_submit.sh  casper_h100_submit.sh  casper_v100_submit.sh  derecho_a100_coverage.sh  derecho_a100_submit.sh  derecho_cpu_submit.sh  ncar_build.sh  ncar_run.sh  updateSamuraiPublic.sh
ncar_scripts/GenerateRef/: balanced_aux.jl  domain_avg_profs.jl
ncar_scripts/TDRP/: beltrami.tdrp  beltrami.val.tdrp  beltramiTR.tdrp  hurricane.tdrp  hurricane_4panel.tdrp  supercell.tdrp  typhoonChanthu2020.tdrp
ncar_scripts/baselines/: log_beltrami_derecho_cpu.202407181450
ncar_scripts/bel_val/: bel_val.ipynb  bel_val.py
ncar_scripts/sync_repos/: updateGitFork.sh  updateSamuraiDevelopment.sh  updateSamuraiPublic.sh
ncar_scripts/utils/: reduceNetCDF.py
ncar_scripts/validation/: validation.py
ncar_scripts/validation/beltrami/: bel_val_nc.py  ref_log  samurai_XYZ_wind_analysis_ref.nc  validation_env.sh
samurai.xcodeproj/: mbell.mode1v3  mbell.pbxuser  project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
src/: .gitignore  Args.cpp  Args.h  BSpline.cpp  BSpline.h  BSplineD.cpp  BSplineF.cpp  BkgdAdapter.h  BkgdArr.cpp  BkgdObsLoaders.cpp  BkgdObsLoaders.h  BkgdStream.cpp  CMakeLists.txt  CostFunction.cpp  CostFunction.h  CostFunction3D.cpp  CostFunction3D.h  CostFunctionCOAMPS.cpp  CostFunctionCOAMPS.h  CostFunctionRTZ.cpp  CostFunctionRTZ.h  CostFunctionThermo.cpp  CostFunctionThermo.h  CostFunctionThermoRTZ.cpp  CostFunctionThermoXYZ.cpp  CostFunctionVAR.h  CostFunctionXYP.cpp  CostFunctionXYP.h  CostFunctionXYZ.cpp  CostFunctionXYZ.h  CostFunctionXY_CPU.h  Dorade.cpp  Dorade.h  ErrorData.cpp  ErrorData.h  FileList.cpp  FileList.h  FrameCenter.cpp  FrameCenter.h  HCq_kernel.cu  (+53 more)
src/date/: tz.h
src/geolib/: README.md
src/thermo_reference/: CostFunctionThermo.cpp  CostFunctionThermo.h  CostFunctionThermoRTZ.cpp  CostFunctionThermoRTZ.h  CostFunctionThermoXYZ.cpp  CostFunctionThermoXYZ.h  NetCDF.cpp  NetCDF.h  NetCDF_XYZ.cpp  NetCDF_XYZ.h  VarDriverThermo.cpp  VarDriverThermo.h
src/timing/: gptl.c  private.h
tcvar.xcodeproj/: CUDA_preprocess.mak  mbell.mode1v3  mbell.pbxuser  project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
util/: crsim2samMetobs.rb  ecgrads2bg.pl  fmtpsi.pl  log  module_cfradial_output.F  samurai_deploy.sh  samurai_deploy_linuxintel.sh  samurai_deploy_mac.sh  samurai_lineartrack.pl  samurai_out2bg.pl  skewt_tparc_samurai.ncl  skewt_tparc_samurai.sh  wrf2sam.rb  wrf2samMetObs.rb
